--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "axios-cookiejar-support": "^6.0.2",
     "cheerio": "^1.0.0",
+    "cookiejar": "^2.1.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fetch-cookie": "^3.1.0",
